--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 style="text-align: center;">head of the page </h1>
+    <br><br>
+
+    <button><a href="home.html">go to home page</a></button>
 </body>
 </html>
