--- a/home.html
+++ b/home.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li><a>home</a></li>
+            <li><a>contact us</a></li>
+            <li><a>register</a></li>
+        </ul>
+    </nav>
+    <h3>this is the home page</h3>
 </body>
 </html>
