--- a/home.html
+++ b/home.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        li{
+            list-style: none;
+            display: flex;
+        }
+    </style>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a>home</a></li>
-            <li><a>contact us</a></li>
-            <li><a>register</a></li>
+            <li><a href="#">home</a></li>
+            <li><a href="#">contact us</a></li>
+            <li><a href="#">register</a></li>
         </ul>
     </nav>
     <h3>this is the home page</h3>
