--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <style>
         li{
             list-style: none;
-            display: flex;
+            display: block;
         }
     </style>
 </head>
