--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     <nav>
         <ul>
             <li><a href="#">home</a></li>
-            <li><a href="#">contact us</a></li>
+            <li><a href="index.html">contact us</a></li>
             <li><a href="#">register</a></li>
         </ul>
     </nav>
